[package]
name = "raft-rs"
version = "0.1.0"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/raft-rs"
homepage = "https://github.com/cssivision/raft-rs"
description = "raft implementation in rust."
readme = "README.md"

[dependencies]
protobuf = "1.4"
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
rand = "0.4"
quick-error = "1.2"
