[package]
name = "libraft"
version = "0.1.1"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/raft-rs"
homepage = "https://github.com/cssivision/raft-rs"
description = "raft implementation in rust."
readme = "README.md"

[dependencies]
protobuf = "1.7"
log = "0.4"
rand = "0.5"
quick-error = "1.2"
